# HealthBridge

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  upload_weights_example.py
.github/workflows/: sync_weights.yml
healthbridge/: __init__.py  client.py  config.py  models.py
scripts/: delete_weights.py  get_garmin_token.py  setup_secrets.py
tests/: test_sync.py
